fixed alignlemnt in peg index page

--- a/app/assets/stylesheets/api/pegs.scss
+++ b/app/assets/stylesheets/api/pegs.scss
@@ -301,7 +301,7 @@ display: flex;
 }
 
 .create-peg-internal-div{
-  width: 5%;
+  width: 5.5%;
 }
 
 .create-peg-internal-div1{
@@ -346,7 +346,7 @@ display: flex;
 
 .pegs-index{
   // display: grid;
-  width: 95%;
+  width: 94.5%;
 }
 
 .pegs-index1{
